[gd_scene load_steps=11 format=1]

[ext_resource path="res://Scripts/DisplayOffspring.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/Black.jpg" type="Texture" id=2]
[ext_resource path="res://Scenes/Display.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Fonts/fall18.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Resources/Sprites/GUI/feed0.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/GUI/feed2.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/GUI/feed1.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprites/GUI/harvest0.png" type="Texture" id=8]
[ext_resource path="res://Resources/Sprites/GUI/harvest2.png" type="Texture" id=9]
[ext_resource path="res://Resources/Sprites/GUI/harvest1.png" type="Texture" id=10]

[node name="DisplayOffspring" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Background" type="TextureFrame" parent="."]

visibility/opacity = 0.6
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Display" parent="." instance=ExtResource( 3 )]

margin/left = 300.0
margin/top = 20.0
margin/right = 340.0
margin/bottom = 60.0

[node name="LineEdit" type="LineEdit" parent="Display"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 140.0
margin/top = 200.0
margin/right = 260.0
margin/bottom = 230.0
custom_fonts/font = ExtResource( 4 )
placeholder/text = "Name"
placeholder/alpha = 0.6
max_length = 16
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Accept" type="TextureButton" parent="Display"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -20.0
margin/top = 520.0
margin/right = 180.0
margin/bottom = 590.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 7 )
textures/disabled = ExtResource( 6 )

[node name="Refuse" type="TextureButton" parent="Display"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 520.0
margin/right = 380.0
margin/bottom = 590.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
textures/hover = ExtResource( 10 )
textures/disabled = ExtResource( 9 )

[connection signal="text_changed" from="Display/LineEdit" to="." method="_on_LineEdit_text_changed"]

[connection signal="pressed" from="Display/Accept" to="." method="_on_Accept_pressed"]

[connection signal="pressed" from="Display/Refuse" to="." method="_on_Refuse_pressed"]


